@@ -59,6 +59,8 @@
       factory=".vocabularies.SolrIndexes"
       name="collective.solr.indexes" />
 
+  <utility factory=".vocabularies.I18NFacetTitlesVocabularyFactory" />
+
   <adapter name="path_string" factory=".attributes.path_string" />
   <adapter name="path_depth" factory=".attributes.path_depth" />
   <adapter name="path_parents" factory=".attributes.path_parents" />
