@@ -4,6 +4,11 @@ Changelog
 3.0b2 - unreleased
 ------------------
 
+- Facet titles can now be provided by specialized vocabularies. Register a named
+  IFacetTitleVocabularyFactory utility and it'll be used to get a vocabulary
+  for the facet field with the same name.
+  [mj]
+
 
 3.0b1 - 2011-09-27
 ------------------
